# HandMouse

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml
docs/: HANDOFF-V2.md  telemetry.md
docs/research/: handmouse-deep-research-report.md  handmouse-v2-design.md  phase2-library-evaluation.md  phase3-performance-optimization.md  phase4-pointer-control-paradigms.md
src/handmouse/: alt_tab_detector.py  app.py  bimanual_gate.py  camera.py  clutch_input.py  config.py  coordinate_mapper.py  debug_view.py  engagement.py  gesture_detector.py  grab_scroll_detector.py  gui.py  hand_tracker.py  interlock.py  mouse_controller.py  move_mode.py  osd.py  physical_input_monitor.py  pointer_engine.py  pointer_mapper.py  pose_detector.py  (+4 more)
tests/: benchmark_fps.py  conftest.py  run_video_replay.py  test_alt_tab_detector.py  test_app.py  test_bimanual_gate.py  test_camera_pipeline_mouse.py  test_clutch_input.py  test_config.py  test_debug_view.py  test_engagement.py  test_gesture_detector.py  test_gesture_policy.py  test_grab_scroll_detector.py  test_gui_tray.py  test_hand_identity_tracker.py  test_hand_tracker.py  test_interlocking_interaction.py  test_mouse_controller.py  test_move_mode.py  test_multi_hand_tracker.py  test_palm_open.py  test_palm_orientation.py  test_physical_input_monitor.py  test_pointer_engine.py  test_pointer_mapper.py  test_pose_detector.py  test_quality_gate.py  test_regression_replay.py  test_replay_runner.py  test_shortcut_controller.py  test_shortcut_detector.py  test_telemetry_writer.py
(+23 files in other folders)
