[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "handmouse"
version = "0.1.0"
description = "Windows-native webcam hand gesture mouse prototype."
requires-python = ">=3.11"
dependencies = [
  "opencv-python>=4.13.0.92",
  "mediapipe>=0.10.35",
  "pyautogui>=0.9.54",
  "pynput>=1.7.7",
  "pystray>=0.19.5",
  "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]
